--- a/1.md
+++ b/1.md
@@ -15,3 +15,26 @@ grep -o hoge file.txt | wc -l
 ```
 
 ここでは、-oによって一致する部分だけgrepし、パイプでつなげてwcコマンドでカウントしている
+
+sedコマンドは、edをワンラインでできるようにしているだけ。
+
+```bash
+sed -n '1p' file
+```
+
+簡単に言うと、edモードのs(substitude)をそのままやってるだけ。-nは指定された行に一致する行のみ出力する。1は行数でpはプリントのエイリアス。vimのノーマルモードの操作に似ている。
+
+もちろん書き換えることもできる。書き換える場合は以下のような形で行う。
+
+```bash
+sed 's/hoge/hogera/' file.txt > file_new.txt
+```
+
+edのsのポイントは、`s/hoge/huga`ではだめであること。必ず最後の/も必要。`s/hoge/huga/`という形で書くことに注意。また、vimと同じで末尾にgをつけると該当行の後ろの部分も連続して対象となる
+
+grepが使い物になったことで、以下のようなコマンドを書くことができる。
+
+```bash
+grep hoge file.txt | sed 's/hoge/huga/g' > file_new2.txt
+grep huga file_new2.txt | rev
+```
