--- a/1.md
+++ b/1.md
@@ -39,7 +39,7 @@ grep hoge file.txt | sed 's/hoge/huga/g' > file_new2.txt
 grep huga file_new2.txt | rev
 ```
 
-## echoの仕方
+echoの仕方について
 
 ```bash
 echo text text2 text3
@@ -50,3 +50,43 @@ echoする際、間にスペース複数ある場合は、クォートで囲う
 ```bash
 echo 'text  text2      text3'
 ```
+
+マニュアルを章ごとに表示する場合は以下のような形で表示する
+
+```bash
+man 1 ls
+```
+
+ところで、lsではなくlでも行ける時がある。しかし、manでやっても表示されない。その場合どうするか？
+
+答えは
+
+```bash
+type l
+```
+
+とすると、
+
+```txt
+l is an alias for ls -lah
+```
+
+と表示される
+
+また、単に
+
+```bash
+alias l
+```
+
+とすると、`l='ls -lah'`と表示される
+
+2つのディレクトリを行ったり来たりするとき
+
+```bash
+cd -
+```
+
+とやると、行ったり来たりできる。便利。
+
+<!-- TODO: NEXT 1.3.7 -->
