--- a/1.md
+++ b/1.md
@@ -89,4 +89,22 @@ cd -
 
 とやると、行ったり来たりできる。便利。
 
-<!-- TODO: NEXT 1.3.7 -->
+shellの機能として、ワイルドカードを使って検索したりとかもできる
+
+```bash
+grep mason ~/.config/nvim/lua/plugins/*.lua
+```
+
+echoで単にリストを表示することもできる
+
+```bash
+echo ~/.config/nvim/lua/plugins/*.lua
+```
+
+ワイルドカードには他にも種類がある。例えば
+
+```bash
+echo 2013??.rst
+```
+
+と言った形で表示することも可能
