--- a/1.md
+++ b/1.md
@@ -108,3 +108,15 @@ echo 2013??.rst
 ```
 
 と言った形で表示することも可能
+
+catを逆にしたtacがある。また、パイプや書き込みなどを組み合わせて、以下のように使うこともできる
+
+```bash
+tac ~/.config/nvim/lua/plugins/mason.lua | awk '{ print $1 }'
+```
+
+uniqで重複削除もできる
+
+```bash
+cat file.txt | uniq
+```
