--- a/1.md
+++ b/1.md
@@ -120,3 +120,90 @@ uniqで重複削除もできる
 ```bash
 cat file.txt | uniq
 ```
+
+ちなみに、例えば以下のコマンドが合ったとする
+
+```bash
+grep hoge *.txt | sed 's/:.*$//' | sort | uniq
+```
+
+この時、grepした時点では
+
+```txt
+file.txt:hoge
+file.txt:hoge
+file.txt:hogera
+file_new.txt:hogerahugehirehare
+file_new.txt:fffhogerahugehore
+file_new.txt:hogerahogehugehuge
+```
+
+となるが、この内、:以降のテキストをsedでけして、ソートした後uniqにするというのをやっている。
+
+以下のように実行したとする
+
+```bash
+echo aaa > hoge
+grep a hoge | wc -l
+```
+
+この結果は1行なので1ではあるが、
+
+```bash
+grep a hoge | wc -l > hoge
+```
+
+とすると、0になる。なぜなら、最後に`> hoge`としているが、これに備えて中身が空になるようになっている。結果として、中身がないので0となる
+
+逆に入力リダイレクトというものもある。例えば
+
+```bash
+cat hoge
+cat < hoge
+```
+
+前者は、引数としてhogeをわたしており、後者は見つけたファイルをそのままわたしている。
+
+例えば、以下の場合だと、入力リダイレクトが必要になる
+
+```bash
+tr '0' '1' < hoge
+```
+
+`<`を省略するとうまく動かない。
+
+ただ、同じことを実現するのであれば、以下の撃ち方でも良い
+
+```bash
+cat hoge | tr '0' '1'
+```
+
+ちなみに、1行目の内容を2行目にコピーするには
+
+```bash
+sed -i "2a$(sed -n '1p' hoge)" hoge
+```
+
+と言ったことで実現できるらしい
+
+sedの-nオプションは、該当箇所のみ表示するという抑制をつけるもの。説明には、
+
+sedで検索して末尾に追加する場合、以下のように書くことができる
+
+```bash
+sed -n '/aarch64/p' info.txt >> fuga.txt
+sed -n '/com/p' info.txt >> fuga.txt
+```
+
+ちなみに、この例だとgrepでもよい
+
+```bash
+grep 'aarch64' info.txt >> fuga.txt
+grep 'com' info.txt >> fuga.txt
+```
+
+awkを使うとワンラインでかける
+
+```bash
+awk '/aarch64/ || /com/' info.txt >> fuga.txt
+```
