--- a/1.md
+++ b/1.md
@@ -178,6 +178,12 @@ tr '0' '1' < hoge
 cat hoge | tr '0' '1'
 ```
 
+一応、こういう書き方もできるらしい
+
+```bash
+<hoge tr '0' '1'
+```
+
 ちなみに、1行目の内容を2行目にコピーするには
 
 ```bash
@@ -207,3 +213,41 @@ awkを使うとワンラインでかける
 ```bash
 awk '/aarch64/ || /com/' info.txt >> fuga.txt
 ```
+
+寄り道
+
+例えば、findを使った検索として、以下の２つ同じ目標を達成する
+
+```bash
+find . -type f -name '*file*' -exec awk '/hoge/' {} \; 
+find . -type f -name '*file*' | xargs awk '/hoge/'
+```
+
+-execでコマンドをつなげたり、xargsで引数としてわたしたりなどができる。
+
+更に寄り道
+
+複数の引数を渡すいろいろな例
+
+ファイル渡すパターン
+
+```bash
+#!/bin/bash
+# wrapper.sh
+command -a "$1" -b "$2"
+```
+
+```bash
+echo "arg1 arg2" | xargs -n 2 ./wrapper.sh
+```
+
+ワンラインパターン
+
+<!-- markdownlint-disable MD013 -->
+```bash
+echo "arg1 arg2" | xargs -n 2 sh -c 'command -option1 "$1" -option2 "$2"'
+echo "arg1 arg2" | (read a b; command -option1 "$a" -option2 "$b")
+command -option1 "$(echo "arg1")" -option2 "$(echo "arg2")"
+echo "command_arg1 command_arg2" | awk '{system("command -option1 " $1 " -option2 " $2)}'
+```
+<!-- markdownlint-enable MD013 -->
