--- a/1.md
+++ b/1.md
@@ -251,3 +251,19 @@ command -option1 "$(echo "arg1")" -option2 "$(echo "arg2")"
 echo "command_arg1 command_arg2" | awk '{system("command -option1 " $1 " -option2 " $2)}'
 ```
 <!-- markdownlint-enable MD013 -->
+
+一応basenameの利用例も
+
+```bash
+find . -type f -name '*file*' -exec basename {} \;
+```
+
+エラーについて
+
+エラーが発生すると、たとえ`> fileName`としても、ファイルに書き込まれない。エラー内容を書き込みたい場合は
+
+```bash
+grep --unknownoption ueda 0< /etc/passwd 1> ans 2> error
+```
+
+という形でエラー内容をファイルに書き込むことができる。
