--- a/1.md
+++ b/1.md
@@ -264,6 +264,86 @@ find . -type f -name '*file*' -exec basename {} \;
 
 ```bash
 grep --unknownoption ueda 0< /etc/passwd 1> ans 2> error
+# もしくは
+grep --unknownoption ueda < /etc/passwd > ans 2> error
 ```
 
 という形でエラー内容をファイルに書き込むことができる。
+
+xargsの違いについて
+
+```bash
+find . -type f -name '*.txt' | wc -l
+find . -type f -name '*.txt' -print0 | xargs -0 wc -l
+```
+
+上の例は、ファイルの数そのものをカウントする、下の例は、ファイル内の行数をそれぞれカウントする
+
+ファイルの書き換えは、基本的には新しいファイルを開いて行うほうがより安全である
+
+```bash
+command file > file.new
+mv file.new file
+```
+
+ベンチマークの測定などをしていると、出力を捨てなければいけないときがある。なぜなら、この出力をファイルに書き出していると、ストレージに影響が出てしまう可能性があるためである。
+
+有名なdev/nullの出番だ
+
+```bash
+# 出力が多すぎる時
+time seq 1 1000000 > /dev/null
+# 結果だけを見たい時
+grep -r aho /etc/ 2> /dev/null
+```
+
+言語は、localeで変更可能
+
+```bash
+LANG=C
+LANG=ja_JP.UTF-8
+```
+
+権限のgroupはgroupsコマンドで確認できる
+
+chownで権限の変更が可能
+
+```bash
+sudo chown user-name:user-name -R ./dir
+```
+
+-Rで再帰的に処理をする
+
+sudo chown garchomp-game:garchomp-game -R etc
+
+制御構文について
+
+```bash
+ls * | while read f; do cp $f $f.backup ;done
+for n in aa bb cc; do echo $n; done
+
+if [ ! -e "$1" ]; then
+  echo "ファイルがない"
+elif grep hoge "$1" > /dev/null; then
+  echo hoge 
+else
+  echo hogeじゃない
+fi
+
+case "$1" in
+  start)
+    # No-op
+  ;;
+  restart|reload|force-reload)
+    echo "Error: argument '$1' not supported" >&2
+    exit 3
+  ;;
+  stop)
+    do_stop
+  ;;
+  *)
+    echo "Usage: $0 start|stop" >&2
+    exit 3
+  ;;
+esac
+```
