--- a/1.md
+++ b/1.md
@@ -219,7 +219,7 @@ awk '/aarch64/ || /com/' info.txt >> fuga.txt
 例えば、findを使った検索として、以下の２つ同じ目標を達成する
 
 ```bash
-find . -type f -name '*file*' -exec awk '/hoge/' {} \; 
+find . -type f -name '*file*' -exec awk '/hoge/' {} \;
 find . -type f -name '*file*' | xargs awk '/hoge/'
 ```
 
@@ -325,7 +325,7 @@ for n in aa bb cc; do echo $n; done
 if [ ! -e "$1" ]; then
   echo "ファイルがない"
 elif grep hoge "$1" > /dev/null; then
-  echo hoge 
+  echo hoge
 else
   echo hogeじゃない
 fi
@@ -346,4 +346,62 @@ case "$1" in
     exit 3
   ;;
 esac
+```
+
+ファイルへの追記は、>>を使う
+
+```bash
+echo message > file.txt
+echo message2 >> file.txt
+cat file
+# message
+# message2
+```
+
+ヒアドキュメントを使うと、簡単に追記できる
+
+```bash
+# << がヒアドキュメント
+cat << FIN >> file.txt
+message add 1
+message add 2
+FIN
+cat fie.txt
+```
+
+ヒアストリングを使って書き換えることもできる
+
+```bash
+a='message add 3'
+sed 's/s/d/g' <<< $a
+# 以下も結果は同様
+echo $a | sed 's/s/d/g'
+```
+
+しかしながら、変数はなるべく扱わないほうが良い。データはなるべく標準入出力で扱うべき。
+
+終了ステータスについて
+
+```bash
+ls hoge
+# 存在しなかった場合
+echo $?
+# 2が返される
+echo $?
+# もう一度実行すると、先程のechoは問題なく終了したので0
+```
+
+ちなみに、パイプになるとこれが厄介。
+
+```bash
+find /temp | wc
+```
+
+上記のコマンドはうまく行かないが、$?としても0が返される。
+このため、独自にパイプステータスが用意されている
+
+```bash
+echo ${PIPESTATUS[@]}
+# zshの場合
+echo ${pipestatus}
 ```
