--- a/1.md
+++ b/1.md
@@ -391,6 +391,39 @@ echo $?
 # もう一度実行すると、先程のechoは問題なく終了したので0
 ```
 
+```bash
+[ "aaa" = "aaa" ]
+echo $?
+# 真なので0 
+
+[ "aaa" = "aab" ]
+echo $?
+# 偽なので1 
+
+[ "aaa" ="aab" ]
+echo $?
+# なんかよくわからないので2(構文エラー) 
+```
+
+```bash
+A="aa"
+[ -n "$A" ]; echo $?
+# 空ではないため0 
+
+[ -z "$A"]; echo $?
+# 1
+```
+
+```bash
+A="-5"
+[ "-10" -lt "$A" ]; echo $?
+# -10 < -5
+[ "-10" -gt "$A" ]; echo $?
+# -10 > -5
+[ "-10" -eq "$A" ]; echo $?
+# -10 == -5
+```
+
 ちなみに、パイプになるとこれが厄介。
 
 ```bash
