--- a/1.md
+++ b/1.md
@@ -394,21 +394,21 @@ echo $?
 ```bash
 [ "aaa" = "aaa" ]
 echo $?
-# 真なので0 
+# 真なので0
 
 [ "aaa" = "aab" ]
 echo $?
-# 偽なので1 
+# 偽なので1
 
 [ "aaa" ="aab" ]
 echo $?
-# なんかよくわからないので2(構文エラー) 
+# なんかよくわからないので2(構文エラー)
 ```
 
 ```bash
 A="aa"
 [ -n "$A" ]; echo $?
-# 空ではないため0 
+# 空ではないため0
 
 [ -z "$A"]; echo $?
 # 1
@@ -437,4 +437,104 @@ find /temp | wc
 echo ${PIPESTATUS[@]}
 # zshの場合
 echo ${pipestatus}
+```
+
+```bash
+[ -f "/etc/passwd" ] && exit 1
+man [ | grep ' -[a-z]FILE]'
+```
+
+awkのためのサンプルデータ作成
+
+```bash
+seq 1 10 | xargs -n 5 > data
+cat data
+awk '{print $2, $4}' data
+cat data | awk '{print $2, $4}'
+# 以下はいずれも4列目
+cat data | awk '{print $(1 + 3)}'
+cat data | awk '{a = 3;print $(1 + a)}'
+cat data | awk 'BEGIN {a = 3} {print $(1 + a)}'
+cat data | awk '{print $(NF-1)}'
+# 以下は最終行だけ
+cat data | awk 'BEGIN {a = 3} END {print $(1 + a)}'
+```
+
+```bash
+echo {a..g} | xargs -n 1
+# 4行目以降を出力したい場合
+echo {a..g} | xargs -n 1 | awk 'NR>=4'
+# 4列目が6列目よりも大きい
+cat data | awk '$4 > 6'
+# 2MB以上のファイルなど
+ls -l | awk '$5>=2000000'
+# 文字列と数値の扱いについて
+
+echo 9.9 | awk '$1 > 88'
+# 何も出力されない
+echo 9.9 | awk '$1 > "88"'
+# 9.9
+```
+
+行を抽出して加工
+
+```bash
+echo {a..g} | xargs -n 1 | awk 'NR>=4{print $1, $1, $1}'
+# d d d
+# e e e
+# f f f
+# g g g
+
+echo {a..g} | xargs -n 1 | awk 'NR>=4{print $1, $1, $1}NR<=4{print$1, $1}'
+# 4行目は両方のパターンにマッチするので、2行出力される
+# a a
+# b b
+# c c
+# d d d
+# d d
+# e e e
+# f f f
+# g g g
+```
+
+BEGINとENDについて。
+
+BEGINは、標準入力からデータが読み込まれる前の状態に実行される。
+
+```bash
+seq 1 5 | awk 'BEGIN{a=100000} {print $1+a}'
+# 100001
+# 100002
+# 100003
+# 100004
+# 100005
+awk 'BEGIN{print 1 + 2}'
+# 3
+```
+
+ENDは標準入力をすべて読み終わって処理も全部終わった状態にマッチする
+
+```bash
+seq 1 5 | awk 'BEGIN{a=100000} {a+=$1} END {print a}'
+```
+
+ifとforについて
+
+```bash
+seq 1 5 | awk '{if($1%2==0){print $1, "偶数"}else{print $1, "奇数"}}'
+seq 1 5 | awk '{for(i=1;i<=NF;i++){a+=$1}}END{print a}'
+# 変数は自動的に0で初期化される
+echo ほげ | awk '{print $1 a $1 b $1}'
+# ほげほげほげ
+```
+
+```bash
+# 以下の2つは同義
+echo {a..g} | awk '{print $1,$2,$3,$4,$5,$6,$7}'
+# $0に業全体が入ってる
+echo {a..g} | awk '{print $0}'
+# もちろん途中でいじっても
+echo {a..g} | awk '{$3="hogehoge";print $0}'
+# 以下は同義
+echo {a..g} | awk '{$3="hogehoge";print}'
 ```
