--- a/1.md
+++ b/1.md
@@ -121,7 +121,7 @@ uniqで重複削除もできる
 cat file.txt | uniq
 ```
 
-ちなみに、例えば以下のコマンドが合ったとする
+ちなみに、例えば以下のコマンドがあったとする
 
 ```bash
 grep hoge *.txt | sed 's/:.*$//' | sort | uniq
@@ -172,7 +172,7 @@ tr '0' '1' < hoge
 
 `<`を省略するとうまく動かない。
 
-ただ、同じことを実現するのであれば、以下の撃ち方でも良い
+ただ、同じことを実現するのであれば、以下打ち方でも良い
 
 ```bash
 cat hoge | tr '0' '1'
@@ -410,7 +410,7 @@ A="aa"
 [ -n "$A" ]; echo $?
 # 空ではないため0
 
-[ -z "$A"]; echo $?
+[ -z "$A" ]; echo $?
 # 1
 ```
 
@@ -438,6 +438,8 @@ echo ${PIPESTATUS[@]}
 # zshの場合
 echo ${pipestatus}
 ```
+
+※注意: pipestatusは、例えばセミコロンなどで区切って実行するとうまくいくが、一度エンターを押して新たなプロンプトを表示させると、リセットされてしまう関係でうまく機能しないことに注意。
 
 ```bash
 [ -f "/etc/passwd" ] && exit 1
@@ -537,4 +539,20 @@ echo {a..g} | awk '{print $0}'
 echo {a..g} | awk '{$3="hogehoge";print $0}'
 # 以下は同義
 echo {a..g} | awk '{$3="hogehoge";print}'
+```
+
+```bash
+seq 1 3 | awk '{printf("%d 円", $1)}'
+# 1 円2 円3 円%
+seq 1 3 | awk '{printf("%d 円 \n", $1)}'
+# 1 円
+# 2 円
+# 3 円
+echo 123 | awk '{printf("%05d\n", $1)}'
+# 00123
+echo ab cd ef gh ij | awk '{printf("%s %s\n%s\n%s%s\n",$1,$2,$3,$4,$5)}'
+# $5)}'
+# ab cd
+# ef
+# ghij
 ```
