--- a/1.md
+++ b/1.md
@@ -541,6 +541,8 @@ echo {a..g} | awk '{$3="hogehoge";print $0}'
 echo {a..g} | awk '{$3="hogehoge";print}'
 ```
 
+printfについて
+
 ```bash
 seq 1 3 | awk '{printf("%d 円", $1)}'
 # 1 円2 円3 円%
@@ -555,4 +557,27 @@ echo ab cd ef gh ij | awk '{printf("%s %s\n%s\n%s%s\n",$1,$2,$3,$4,$5)}'
 # ab cd
 # ef
 # ghij
+```
+
+sprintfについて
+
+```bash
+echo 上田 ０ 不合格 | awk '{print $1, sprintf("%010d 点", $2),$3}'
+# printfだとめんどくさい
+echo 上田 ０ 不合格 | awk '{printf("%s %010d 点 %s\n", $1, $2, $3)}'
+# iだけiiにする
+echo {a..z} | awk '{$9=sprintf("%s%s",$9,$9);print}'
+```
+
+sub,gsub,gensubについて
+
+```bash
+echo オバチャンオバチャン | awk '{sub(/オバ/,"オッ",$0);print}'
+# 以下も同じ
+echo オバチャンオバチャン | awk '{sub(/オバ/,"オッ");print}'
+# gsub配置業何回も置換
+echo オバチャンオバチャン | awk '{gsub(/オバ/,"オッ");print}'
+#  gensubは文字列を返す。変換は一回だけ
+echo オバチャンオバチャン | awk '{$0 = gensub(/オバ/,"オッ","g");print}'
+
 ```
