--- a/1.md
+++ b/1.md
@@ -578,6 +578,25 @@ echo オバチャンオバチャン | awk '{sub(/オバ/,"オッ");print}'
 # gsub配置業何回も置換
 echo オバチャンオバチャン | awk '{gsub(/オバ/,"オッ");print}'
 #  gensubは文字列を返す。変換は一回だけ
-echo オバチャンオバチャン | awk '{$0 = gensub(/オバ/,"オッ","g");print}'
+echo オバチャンオバチャン | awk '{$0 = gensub(/オバ/,"オッ",1, $0);print}'
+```
 
+sedを使う(vimと大体同じ)
+
+```bash
+echo オバチャンオバチャン | sed 's/オバ/オッ/'
+echo オバチャンオバチャン | sed 's/オバ/オッ/g'
+# 郵便番号を使う
+cat zipcode
+# 1110001
+# 2220001
+cat zipcode | sed 's/0001/-0001/'
+# 正規表現使う場合
+cat zipcode | sed 's/.../&-/'
+# こんな書き方もある。ほぼmagic検索
+cat zipcode | sed 's/\(...\)\(....\)/\1-\2/'
+echo 'abc/def' | sed 's/\//_/'
+echo 'abc/def' | sed 's;/;_;'
+echo 'abc/def' | sed 's@/@_@'
+echo 'abc/def' | sed 'sa/a_a'
 ```
