--- a/1.md
+++ b/1.md
@@ -599,4 +599,29 @@ echo 'abc/def' | sed 's/\//_/'
 echo 'abc/def' | sed 's;/;_;'
 echo 'abc/def' | sed 's@/@_@'
 echo 'abc/def' | sed 'sa/a_a'
+# 以下のように書くと改行される
+echo {a..e} | xargs -n 1
+# ちなみに他にもこんな方法が
+echo {a..e} | xargs -n 1 printf "%s\n"
+echo {a..e} | awk '{for(i=1; i<=NF; i++) print $i}'
+echo {a..e} | tr ' ' '\n'
+# 本題
+# bだけ???に
+echo {a..e} | xargs -n 1 | sed '/b/s/./???/'
+echo {a..e} | xargs -n 1 | sed 's/b/???/'
+# 以下はa???となる
+echo ab b c bd e | xargs -n 1 | sed '/b/s/./???/'
+# 以下は???bとなる
+echo ab b c bd e | xargs -n 1 | sed 's/b/???/'
+# bからdまで???に
+echo {a..e} | xargs -n 1 | sed '/b/,/d/s/./???/'
+echo {a..e} | xargs -n 1 | sed 's/[b-d]/???/'
+# ???b
+echo ab b c bd e | xargs -n 1 | sed '/b/,/d/s/./???/'
+# a???
+echo ab b c bd e | xargs -n 1 | sed 's/[b-d]/???/'
+
+echo {a..e} | xargs -n 1 | sed -n '4p'
+echo {a..e} | xargs -n 1 | sed -n '2,4p'
+echo {a..e} | xargs -n 1 | sed -n '/b/,/d/p'
 ```
