--- a/1.md
+++ b/1.md
@@ -625,3 +625,15 @@ echo {a..e} | xargs -n 1 | sed -n '4p'
 echo {a..e} | xargs -n 1 | sed -n '2,4p'
 echo {a..e} | xargs -n 1 | sed -n '/b/,/d/p'
 ```
+
+gawkインストール確認
+
+```bash
+echo 山田 | awk '{gsub(/^./," 上 ", $1);print}'
+# gawkじゃなかった場合は
+sudo apt-fast install gawk
+# open usp tukubaiなど
+sudo apt-fast install python-is-python3 aria2 zip git make
+aria2c -x 16 -s 16 https://github.com/usp-engineers-community/Open-usp-Tukubai/archive/master.zip
+# この後は普通にmake install
+```
