--- a/1.md
+++ b/1.md
@@ -635,5 +635,7 @@ sudo apt-fast install gawk
 # open usp tukubaiなど
 sudo apt-fast install python-is-python3 aria2 zip git make
 aria2c -x 16 -s 16 https://github.com/usp-engineers-community/Open-usp-Tukubai/archive/master.zip
+# selfでインストールされたか確認できる
+self
 # この後は普通にmake install
 ```
