--- a/2.md
+++ b/2.md
@@ -1,1 +1,30 @@
 # 第２章
+
+grepコマンドについて
+
+```bash
+cat /etc/services | grep http | grep 80
+cat ~/.config/nvim/lua/config/mappings.lua | grep vt -A 3
+```
+
+タブ文字が使えない問題について
+
+```bash
+cat /etc/services | grep http | tr '\t' ' ' | grep ' 80/'
+# 教科書的には次のように解決する
+cat /etc/services | grep http | grep '[[:space:]]80/'
+cat /etc/services | grep http |  grep '80/'
+# <C-v><TAB>でタブ文字を入れれる
+cat /etc/services | grep http | grep '      80/'
+# $をシングルクォートの直前に入れるとタブ文字が変換される
+cat /etc/services | grep http | grep $'\t80/'
+```
+
+regexについて
+
+```bash
+# regexの説明は、man 7 regexで見れる
+grep '80/..p' /etc/services
+grep '80/[tu][cd]p' /etc/services
+grep '[2-8]000/tcp' /etc/services
+```
