--- a/2.md
+++ b/2.md
@@ -27,4 +27,41 @@ regexについて
 grep '80/..p' /etc/services
 grep '80/[tu][cd]p' /etc/services
 grep '[2-8]000/tcp' /etc/services
+grep '[^2-8]000/tcp' /etc/services
+grep '0*/tcp' /etc/services | head -n 5
+# ブラケットをいくつも書くのがめんどくさい例
+grep '[0-9][0-9][0-9][0-9][0-9][0-9]*/tcp' /etc/services | head -n 3
+# -Eでより簡単にかける
+grep -E '[0-9]{5}/tcp' /etc/services | head -n 3
+```
+
+-Eなしの場合は基本正規表現、-Eありの場合は拡張正規表現
+
+```bash
+# 戦闘がuで始まるもの
+grep '^u' /etc/services
+# 末尾がaであるもの
+grep 'a$' /etc/services
+# xxを除く
+grep "私は" ./data/mistery.txt | grep -v "蛹"
+# これを応用すると…
+cat /etc/services | grep http | grep -v http- | grep -v https | grep -v ^#
+```
+
+複数ファイルから検索する
+
+```bash
+cd /etc/ssh/
+ls *config
+grep key ssh_config
+# ワイルドカードを使う
+grep key *config
+# /etc/ssh下のファイル全てから(key)を検索したい時
+# ファイルが一つでもファイル名を出力する
+# -rは再帰という意味
+sudo grep -r key /etc/ssh/
+# ファイル名の表示が-H
+grep -H key ssh_config
+# 非表示が-h
+grep -h key ssh_config
 ```
