--- a/1.md
+++ b/1.md
@@ -581,6 +581,43 @@ echo オバチャンオバチャン | awk '{gsub(/オバ/,"オッ");print}'
 echo オバチャンオバチャン | awk '{$0 = gensub(/オバ/,"オッ",1, $0);print}'
 ```
 
+まとめ
+
+```awk
+# 特定の列を出力
+{print $2, $4}
+
+# 4列目を出力（複数の方法）
+{print $(1 + 3)}
+{a = 3; print $(1 + a)}
+BEGIN {a = 3} {print $(1 + a)}
+{print $(NF-1)}
+
+# 最終行のみを出力
+BEGIN {a = 3} END {print $(1 + a)}
+
+# 条件にマッチする行を出力
+NR>=4
+$4 > $6
+$5 >= 2000000
+
+# 条件分岐と繰り返し
+{if($1 % 2 == 0) {print $1, "偶数"} else {print $1, "奇数"}}
+{for(i = 1; i <= NF; i++) {a += $1}} END {print a}
+
+# printfとsprintfの使用例
+{printf("%d 円", $1)}
+{printf("%d 円 \n", $1)}
+{printf("%05d\n", $1)}
+{printf("%s %s\n%s\n%s%s\n", $1, $2, $3, $4, $5)}
+{print $1, sprintf("%010d 点", $2), $3}
+{$9 = sprintf("%s%s", $9, $9); print}
+
+# 文字列の置換
+{sub(/オバ/, "オッ", $0); print}
+{gsub(/オバ/, "オッ"); print}
+{$0 = gensub(/オバ/, "オッ", 1, $0); print}
+```
 sedを使う(vimと大体同じ)
 
 ```bash
