--- a/2.md
+++ b/2.md
@@ -53,7 +53,7 @@ cat /etc/services | grep http | grep -v http- | grep -v https | grep -v ^#
 ```bash
 cd /etc/ssh/
 ls *config
-grep key ssh_config
+grep key ssh_config sshd_config
 # ワイルドカードを使う
 grep key *config
 # /etc/ssh下のファイル全てから(key)を検索したい時
@@ -64,4 +64,13 @@ sudo grep -r key /etc/ssh/
 grep -H key ssh_config
 # 非表示が-h
 grep -h key ssh_config
+# whileと組み合わせたりとか…
+ls *config | while read f; do grep -H key $f; done
+# 上記のやり方は単調なので、xargsですっきり書いてみる
+ls *config | xargs grep key
+# ファイル名で検索する
+sudo find . -type f | head -n 4
+sudo find . -type f | head
+# 正規表現も使える
+sudo find . -type f | grep '/.conf$' | sudo xargs grep 443
 ```
