--- a/2.md
+++ b/2.md
@@ -73,4 +73,8 @@ sudo find . -type f | head -n 4
 sudo find . -type f | head
 # 正規表現も使える
 sudo find . -type f | grep '/.conf$' | sudo xargs grep 443
+# -Aで検索で引っかかった対象のあとの行も表示可能
+grep SCG02 -A 3 info.txt
+grep SCG02 -B 3 info.txt
+grep SCG02 -C 3 info.txt
 ```
